refactor: change index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
+DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Example</title>
+    <link rel="stylesheet" href="Style.css">
+</head>
+<body>
+    <section class="sec">
+        <img src="https://vignette.wikia.nocookie.net/half-life/images/7/7c/Aperture_poster002a2.png/revision/latest?cb=20120621151633&path-prefix=en" alt="Avatar" width="300" height="400">
 
+    <p>1. Pavel Dubau</p>
+    
+    <p>2. Contacts:
+         <p>e-mail: <a href="infra.sd@gmail.com">infra.sd@gmail.com</a></p>
+         <p>Telegram: <a href="https://t.me/infrasnd">https://t.me/infrasnd</a></p>
+    <p>3. Trying to acquire some knowledge of frontend programming</p>
+    <p>4. Have a bit of skills in <b>Python, JavaScript, HTML, CSS</b></p>
+    <p>5. I don't have any code examples at this time</p>
+    <p>6. I don't have any job experiences</p>
+    <p>7. Graduated from university</p>
+    <p>8. My english skills are between A1 and A2 levels but i'm working for improve them</p>
+    </section>
+</body>
+</html>
